feat: add append balance endpoint to swagger
